--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -709,4 +709,26 @@ Project=D:/Programs/Epic Games/UE_4.19/
 [MRU]
 MRUItem0=/Game/Levels/levelLightsOne
 
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[DetailCategories]
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+
+[AssetEditorToolkitTabLocation]
+/Game/Data/ENUM_EnemyOneState.ENUM_EnemyOneState=1
+
 
