--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -650,9 +650,11 @@ DesktopPlatform.TimeStamp=2018.06.02-17.49.12
 DesktopPlatform.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2018.06.02-17.49.13
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.06.02-17.49.13
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=334.400
@@ -683,7 +685,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Items
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -693,7 +695,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../Projects/Xray/Xray/ProjectXray/Content/
+UNR=../../../../Projects/Xray/Xray/ProjectXray/Content/Levels
 BRUSH=../../../../Projects/Xray/Xray/ProjectXray/Content/
 FBX=../../../../Projects/Xray/Xray/ProjectXray/Content/
 FBXAnim=../../../../Projects/Xray/Xray/ProjectXray/Content/
@@ -713,6 +715,9 @@ MRUItem0=/Game/Levels/levelLightsOne
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailCategories]
 WorldSettings.World=True
