--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1265,7 +1265,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/Items
-ContentBrowserTab1.SelectedPaths=/Game/Items/Geometry
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1347,7 +1347,6 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
-<<<<<<< HEAD
 LandscapeGizmoActiveActor.TransformCommon=True
 LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
 LandscapeGizmoActiveActor.Gizmo=True
@@ -1356,8 +1355,8 @@ LandscapeGizmoActiveActor.Input=True
 LandscapeGizmoActiveActor.Actor=True
 Actor.TransformCommon=True
 Actor.Actor=True
-=======
->>>>>>> e8df1ffff2017fe1a42f8e8bd0d9f62a6867dcff
+None=======
+None=======
 Brush.TransformCommon=True
 Brush.BrushSettings=True
 Brush.Actor=True
@@ -1365,7 +1364,6 @@ Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
 LightmassPrimitiveSettingsObject.Lightmass=True
-<<<<<<< HEAD
 BB_Wall_C.TransformCommon=True
 BB_Wall_C.Rendering=True
 BB_Wall_C.Input=True
@@ -1384,8 +1382,6 @@ SceneComponent.Events=True
 Generic.Surface Materials=True
 Generic.Geometry=True
 Generic.Surface Properties=True
-=======
->>>>>>> e8df1ffff2017fe1a42f8e8bd0d9f62a6867dcff
 
 [AssetEditorToolkitTabLocation]
 /Game/Data/ENUM_EnemyOneState.ENUM_EnemyOneState=1
