--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1335,8 +1335,8 @@ Project=D:/Programs/Epic Games/UE_4.19/
 
 [MRU]
 MRUItem0=/Game/Levels/LevelSpoogeOne
-MRUItem1=/Game/Levels/levelLightsOne
-MRUItem2=/Game/Levels/LightsProcedure/ProceduralP
+MRUItem1=/Game/Levels/LightsProcedure/ProceduralP
+MRUItem2=/Game/Levels/levelLightsOne
 MRUItem3=/Game/Levels/LightsProcedure/Procedural01
 MRUItem4=/Game/Levels/LightsProcedure/NewWorld
 
@@ -2027,9 +2027,10 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Items/SM_WallFill.SM_WallFill;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Items/SM_WallWindow.SM_WallWindow;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Items/SM_Wall.SM_Wall;
 RecentlyPlaced=/Game/Items/SM_WallDoor.SM_WallDoor;
 RecentlyPlaced=/Game/Items/SM_Roof.SM_Roof;
