--- a/ProjectXray/Config/DefaultInput.ini
+++ b/ProjectXray/Config/DefaultInput.ini
@@ -39,6 +39,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Interact",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Forward_Backward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="Forward_Backward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="Left_Right",Key=A,Scale=-1.000000)
