--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1269,6 +1269,7 @@ DistCurveEditor.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/Items/Geometry/SM_Door_1_Door.SM_Door_1_Door
 
 [RootWindow]
 ScreenPosition=X=182.000 Y=150.000
