--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,7 +81,7 @@ LastLevel=/Game/Levels/LightsProcedure/ProceduralP
 LastLevel=/Game/Levels/LevelSpoogeOne
 LastLevel=/Game/Levels/LevelSpoogeOne
 LastLevel=/Game/Levels/LevelSpoogeOne
-LastLevel=/Game/Levels/levelLightsOne
+LastLevel=/Game/StarterContent/Maps/Minimal_Default
 None=======
 None=======
 None=======
@@ -91,7 +91,7 @@ None=======
 
 [ModuleFileTracking]
 ProjectXray.TimeStamp=2018.06.05-21.52.01
-ProjectXray.TimeStamp=2018.06.07-00.12.22
+ProjectXray.TimeStamp=2018.06.07-02.50.40
 ProjectXray.LastCompileMethod=Unknown
 ProjectXray.LastCompileMethod=External
 PakFile.TimeStamp=2018.06.02-17.49.15
@@ -1269,10 +1269,9 @@ DistCurveEditor.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/Items/Geometry/SM_Door_1_Door.SM_Door_1_Door
 
 [RootWindow]
-ScreenPosition=X=182.000 Y=150.000
+ScreenPosition=X=181.600 Y=149.600
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1305,7 +1304,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/Items
 ContentBrowserTab1.SelectedPaths=/Game/Items
 ContentBrowserTab1.SelectedPaths=/Game/Items/Geometry
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Enemy
 None=======
 None=======
 None=======
@@ -1423,6 +1422,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.Look_Up_Down,InputSettings.
 StaticMesh=
 AssetViewerSettings=AssetViewerSettings.Color Grading.Color Grading,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,
+CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
 
 [DetailCategories]
 WorldSettings.World=True
@@ -2191,6 +2191,92 @@ BoxComponent.Cooking=True
 BoxComponent.Events=True
 K2Node_Timeline.GraphNodeDetail=True
 SM_Door_1_Open_C.TransformCommon=True
+Arrow_1_C.Tick=True
+Arrow_1_C.Rendering=True
+Arrow_1_C.Replication=True
+Arrow_1_C.Input=True
+Arrow_1_C.Actor=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystemComponent.Materials=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.Collision=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
+Arrow_1_C.TransformCommon=True
+CapsuleComponent.HLOD=True
+K2Node_BreakStruct.PinOptions=True
+REINST_Char_EnemyOne_C_169.None=True
+REINST_Char_EnemyOne_C_169.Tick=True
+REINST_Char_EnemyOne_C_169.Character=True
+REINST_Char_EnemyOne_C_169.Camera=True
+REINST_Char_EnemyOne_C_169.Pawn=True
+REINST_Char_EnemyOne_C_169.Rendering=True
+REINST_Char_EnemyOne_C_169.Replication=True
+REINST_Char_EnemyOne_C_169.Input=True
+REINST_Char_EnemyOne_C_169.Actor=True
+REINST_Char_EnemyOne_C_289.None=True
+REINST_Char_EnemyOne_C_289.Tick=True
+REINST_Char_EnemyOne_C_289.Character=True
+REINST_Char_EnemyOne_C_289.Camera=True
+REINST_Char_EnemyOne_C_289.Pawn=True
+REINST_Char_EnemyOne_C_289.Rendering=True
+REINST_Char_EnemyOne_C_289.Replication=True
+REINST_Char_EnemyOne_C_289.Input=True
+REINST_Char_EnemyOne_C_289.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Data/ENUM_EnemyOneState.ENUM_EnemyOneState=1
@@ -2245,6 +2331,7 @@ None=======
 /Game/StarterContent/Props/SM_Bush1.SM_Bush1=0
 /Game/StarterContent/Props/SM_Door.SM_Door=0
 /Game/Levels/LevelSpoogeOne.LevelSpoogeOne:PersistentLevel.MatineeActor_0=0
+/Game/Items/Actor/Arrow_1.Arrow_1=1
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
@@ -2274,6 +2361,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Items/Actor/Arrow_1.Arrow_1;
 RecentlyPlaced=/Game/Items/Geometry/SM_Door_1_Open.SM_Door_1_Open;
 RecentlyPlaced=/Game/Items/Geometry/SM_Door_1.SM_Door_1;
 RecentlyPlaced=/Game/Items/Geometry/SM_Door_1_Door.SM_Door_1_Door;
@@ -2293,12 +2381,6 @@ RecentlyPlaced=/Game/Items/SpawnWall.SpawnWall;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Items/Geometry/SM_House2.SM_House2;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Items/SM_WallFill.SM_WallFill;
-RecentlyPlaced=/Game/Items/SM_Wall.SM_Wall;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Items/SM_WallWindow.SM_WallWindow;
-RecentlyPlaced=/Game/Items/SM_WallDoor.SM_WallDoor;
-RecentlyPlaced=/Game/Items/SM_Roof.SM_Roof;
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2308,9 +2390,9 @@ LandscapeGizmoActiveActor="\"Object.Actor.PivotOffset\" "
 LandscapeGizmoActor="\"Object.Actor.PivotOffset\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent=
 Object=
 ProceduralP_C="\"Object.\" \"Object.\" "
 LevelScriptActor=
@@ -2341,6 +2423,7 @@ AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Physics=True
@@ -2357,6 +2440,7 @@ TargetPoint.Actor=True
 Brush.Geometry=False
 Brush.Actor=False
 Actor.Actor=True
+Arrow_1_C.Actor=True
 
 [WorldBrowser]
 DisplayPaths=False
