--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,11 +82,9 @@ LastLevel=/Game/Levels/LightsProcedure/ProceduralP
 LastLevel=/Game/Levels/LevelSpoogeOne
 LastLevel=/Game/Levels/LevelSpoogeOne
 LastLevel=/Game/Levels/LevelSpoogeOne
-<<<<<<< HEAD
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
-=======
-LastLevel=/Game/Levels/LevelSpoogeOne
->>>>>>> 38d20e11506e8fae3059c856df1af4095991efdd
+LastLevel=/Engine/Maps/Templates/Template_Default
+None=======
 None=======
 None=======
 None=======
@@ -96,7 +94,7 @@ None=======
 
 [ModuleFileTracking]
 ProjectXray.TimeStamp=2018.06.05-21.52.01
-ProjectXray.TimeStamp=2018.06.07-02.50.40
+ProjectXray.TimeStamp=2018.06.07-13.58.15
 ProjectXray.LastCompileMethod=Unknown
 ProjectXray.LastCompileMethod=External
 PakFile.TimeStamp=2018.06.02-17.49.15
@@ -1276,7 +1274,7 @@ CleanShutdown=True
 None=======
 
 [RootWindow]
-ScreenPosition=X=181.600 Y=149.600
+ScreenPosition=X=181.000 Y=149.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1309,11 +1307,9 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/Items
 ContentBrowserTab1.SelectedPaths=/Game/Items
 ContentBrowserTab1.SelectedPaths=/Game/Items/Geometry
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Enemy
-=======
-ContentBrowserTab1.SelectedPaths=/Game/Items/Geometry
->>>>>>> 38d20e11506e8fae3059c856df1af4095991efdd
+ContentBrowserTab1.SelectedPaths=/Game/Levels
+None=======
 None=======
 None=======
 None=======
@@ -2286,6 +2282,42 @@ REINST_Char_EnemyOne_C_289.Rendering=True
 REINST_Char_EnemyOne_C_289.Replication=True
 REINST_Char_EnemyOne_C_289.Input=True
 REINST_Char_EnemyOne_C_289.Actor=True
+Character.TransformCommon=True
+Character.Animation=True
+Character.Mesh=True
+Character.Clothing=True
+Character.Physics=True
+Character.Collision=True
+Character.ClothingSimulation=True
+Character.Lighting=True
+Character.Rendering=True
+Character.Tags=True
+Character.Activation=True
+Character.Cooking=True
+Character.Character Movement: Jumping / Falling=True
+Character.Character Movement (General Settings)=True
+Character.Character Movement: Walking=True
+Character.Character Movement: Swimming=True
+Character.Character Movement: Flying=True
+Character.Character Movement: Custom Movement=True
+Character.Character Movement (Rotation Settings)=True
+Character.Character Movement: Physics Interaction=True
+Character.Character Movement (Networking)=True
+Character.Character Movement=True
+Character.Character Movement: Avoidance=True
+Character.Character Movement: NavMesh Movement=True
+Character.RootMotion=True
+Character.NavMovement=True
+Character.Velocity=True
+Character.PlanarMovement=True
+Character.MovementComponent=True
+Character.Shape=True
+Character.Navigation=True
+Character.Character=True
+Character.Camera=True
+Character.Pawn=True
+Character.Input=True
+Character.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Data/ENUM_EnemyOneState.ENUM_EnemyOneState=1
@@ -2370,6 +2402,8 @@ None=======
 None=======
 None=======
 None=======
+None=======
+RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Game/Items/Actor/Arrow_1.Arrow_1;
 RecentlyPlaced=/Game/Items/Geometry/SM_Door_1_Open.SM_Door_1_Open;
 RecentlyPlaced=/Game/Items/Geometry/SM_Door_1.SM_Door_1;
@@ -2389,11 +2423,6 @@ RecentlyPlaced=/Game/Characters/Enemy/Char_EnemyOne.Char_EnemyOne;
 RecentlyPlaced=/Game/Items/SpawnWall.SpawnWall;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Items/Geometry/SM_House2.SM_House2;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-<<<<<<< HEAD
-=======
-RecentlyPlaced=/Game/Items/SM_WallFill.SM_WallFill;
->>>>>>> 38d20e11506e8fae3059c856df1af4095991efdd
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
