--- a/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectXray/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,10 +50,8 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-LQ7UABI
 LastExecutedLaunchName=DESKTOP-LQ7UABI
 LastExecutedPIEPreviewDevice=
-<<<<<<< HEAD
-=======
+None=======
 LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -87,7 +85,7 @@ LastLevel=/Game/Levels/LevelSpoogeOne
 LastLevel=/Game/Levels/LevelSpoogeOne
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 LastLevel=/Engine/Maps/Templates/Template_Default
-LastLevel=/Game/Levels/LevelSpoogeOne
+LastLevel=/Game/StarterContent/Maps/Minimal_Default
 None=======
 None=======
 None=======
@@ -99,7 +97,7 @@ None=======
 
 [ModuleFileTracking]
 ProjectXray.TimeStamp=2018.06.05-21.52.01
-ProjectXray.TimeStamp=2018.06.07-20.41.54
+ProjectXray.TimeStamp=2018.06.08-21.54.48
 ProjectXray.LastCompileMethod=Unknown
 ProjectXray.LastCompileMethod=External
 PakFile.TimeStamp=2018.06.02-17.49.15
@@ -1277,14 +1275,9 @@ DistCurveEditor.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/Characters/Enemy/AI/BB_EnemyTwo.BB_EnemyTwo
-OpenAssetsAtExit=/Game/Characters/Enemy/AI/BT_EnemyTwo.BT_EnemyTwo
-OpenAssetsAtExit=/Game/Characters/Enemy/AI/AIC_EnemyTwo.AIC_EnemyTwo
-OpenAssetsAtExit=/Game/Characters/Enemy/AI/Tasks/ShootActor.ShootActor
-OpenAssetsAtExit=/Game/Characters/Enemy/Char_EnemyTwo.Char_EnemyTwo
 
 [RootWindow]
-ScreenPosition=X=181.000 Y=149.000
+ScreenPosition=X=180.800 Y=148.800
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1318,21 +1311,15 @@ ContentBrowserTab1.SelectedPaths=/Game/Items
 ContentBrowserTab1.SelectedPaths=/Game/Items
 ContentBrowserTab1.SelectedPaths=/Game/Items/Geometry
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Enemy
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-None=======
-=======
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/Items/Actor
-=======
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-=======
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Enemy/AI
->>>>>>> fc44bbd8801d5401563efd867811930b27a11f3e
->>>>>>> ce0be677068768a4abf93635405b22eb63bd2ef7
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
+None=======
+None=======
+None=======
+None=======
 None=======
 None=======
 None=======
@@ -1452,7 +1439,7 @@ StaticMesh=
 AssetViewerSettings=AssetViewerSettings.Color Grading.Color Grading,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
-PostProcessVolume=PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Exposure,
+PostProcessVolume=PostProcessVolume.Lens.Lens
 
 [DetailCategories]
 WorldSettings.World=True
@@ -1504,6 +1491,8 @@ LandscapeGizmoActiveActor.Input=True
 LandscapeGizmoActiveActor.Actor=True
 Actor.TransformCommon=True
 Actor.Actor=True
+None=======
+None=======
 None=======
 None=======
 None=======
@@ -2403,7 +2392,6 @@ AIC_EnemyTwo_C.Replication=True
 AIC_EnemyTwo_C.Input=True
 AIC_EnemyTwo_C.Actor=True
 AIC_EnemyTwo_C.LOD=True
-<<<<<<< HEAD
 MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
 MaterialExpressionFunctionOutput.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
@@ -2445,8 +2433,6 @@ FoliageType_InstancedStaticMesh.Placement=True
 FoliageType_InstancedStaticMesh.InstanceSettings=True
 FoliageType_InstancedStaticMesh.Physics=True
 FoliageType_InstancedStaticMesh.Scalability=True
-=======
-<<<<<<< HEAD
 Char_EnemyTwo_C.Character Movement: Jumping / Falling=True
 Char_EnemyTwo_C.Character Movement (General Settings)=True
 Char_EnemyTwo_C.Character Movement: Walking=True
@@ -2516,10 +2502,6 @@ ChildActorComponent.Tags=True
 ChildActorComponent.ComponentReplication=True
 ChildActorComponent.Variable=True
 ChildActorComponent.Cooking=True
-=======
->>>>>>> fc44bbd8801d5401563efd867811930b27a11f3e
->>>>>>> ce0be677068768a4abf93635405b22eb63bd2ef7
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
 
 [AssetEditorToolkitTabLocation]
 /Game/Data/ENUM_EnemyOneState.ENUM_EnemyOneState=1
@@ -2555,6 +2537,7 @@ None=======
 None=======
 None=======
 None=======
+None=======
 /Game/Items/Geometry/SM_House_1.SM_House_1=1
 /Game/Items/Geometry/SM_House2.SM_House2=1
 /Game/Characters/Enemy/Char_EnemyOne.Char_EnemyOne=1
@@ -2577,7 +2560,6 @@ None=======
 /Game/Items/Actor/Arrow_1.Arrow_1=1
 /Game/Characters/Enemy/Char_EnemyTwo.Char_EnemyTwo=1
 /Game/Characters/Enemy/AI/AIC_EnemyTwo.AIC_EnemyTwo=1
-<<<<<<< HEAD
 /Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss=0
 /Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt=0
 /Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone=0
@@ -2592,12 +2574,10 @@ None=======
 /Game/Landscape/Martian3.Martian3=0
 /Game/Landscape/LandscapeMartianMaster.LandscapeMartianMaster=0
 /Game/StarterContent/Props/SM_Rock.SM_Rock=0
-=======
 /Game/Characters/Enemy/AI/BB_EnemyTwo.BB_EnemyTwo=1
 /Game/Characters/Enemy/AI/Tasks/ShootActor.ShootActor=1
 /Game/Characters/Enemy/AI/BT_EnemyTwo.BT_EnemyTwo=1
 /Game/Characters/Enemy/AI/BT_EnemyTwoService.BT_EnemyTwoService=1
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
@@ -2618,6 +2598,7 @@ BrushRadius=1024.000000
 NoiseMode=1
 
 [PlacementMode]
+None=======
 None=======
 None=======
 None=======
@@ -2653,13 +2634,10 @@ RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactory
 RecentlyPlaced=/Game/Items/Geometry/SM_House_3.SM_House_3;
 RecentlyPlaced=/Game/Items/SM_StairMiddle.SM_StairMiddle;
 RecentlyPlaced=/Game/Items/SM_Stair2.SM_Stair2;
-<<<<<<< HEAD
-=======
 RecentlyPlaced=/Game/Items/Geometry/SM_House2.SM_House2;
 RecentlyPlaced=/Game/Items/SM_Stair1.SM_Stair1;
 RecentlyPlaced=/Game/Items/SpawnWall.SpawnWall;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2670,13 +2648,12 @@ LandscapeGizmoActor="\"Object.Actor.PivotOffset\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-<<<<<<< HEAD
 SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-=======
 SceneComponent=
+ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ActorComponent=
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
+None=======
+None=======
 Object=
 ProceduralP_C="\"Object.\" \"Object.\" "
 LevelScriptActor=
@@ -2708,18 +2685,15 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.COMNudge\" \"Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-<<<<<<< HEAD
 AIC_EnemyTwo_C="\"Object.Controller.Controller"
-AIController="\"Object.Controller.Controller"
-Controller="\"Object.Controller.Controller"
-PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-=======
 AIC_EnemyTwo_C=
+AIController="\"Object.Controller.Controller"
 AIController=
+Controller="\"Object.Controller.Controller"
 Controller=
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Physics=True
@@ -2737,12 +2711,10 @@ Brush.Geometry=False
 Brush.Actor=False
 Actor.Actor=True
 Arrow_1_C.Actor=True
-<<<<<<< HEAD
 StaticMesh.StaticMesh=True
-=======
+None=======
 StructProperty.Variable=False
 K2Node_VariableGet.Variable=True
->>>>>>> de77e9359401c818c36595c7a18a20fcc2771a78
 
 [WorldBrowser]
 DisplayPaths=False
